v6 SNSPostDetailActivity.java 관련 추가

--- a/TWIPEE_SNS/app/src/main/res/layout/item_snsview.xml
+++ b/TWIPEE_SNS/app/src/main/res/layout/item_snsview.xml
@@ -126,79 +126,14 @@
                 android:layout_marginTop="15dp">
             </TextView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/layout_caption"
-                android:layout_below="@id/tv_caption"
-                android:layout_marginTop="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="여행타입"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_triptype">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="여행기간"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_period">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="여행인원"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_people">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="교통수단"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_traffic">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="여행비용"
-                    android:textStyle="bold">
-                </TextView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_cost">
-                </TextView>
-            </LinearLayout>
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="더보기"
+                android:text="상세 보기"
                 android:textColor="@color/grey"
                 android:textSize="18sp"
                 android:id="@+id/tv_moreContent"
-                android:layout_below="@+id/layout_caption"
+                android:layout_below="@+id/tv_caption"
                 android:layout_marginTop="15dp">
             </TextView>
 
