1. firebase 연동 2. sns 관려 model 수정 및 추가 3. 모의 데이터 firebase에 저장 및 불러오기 가능(게시물 세부보기까지)

--- a/TWIPEE_SNS/app/src/main/res/layout/activity_sns_detail.xml
+++ b/TWIPEE_SNS/app/src/main/res/layout/activity_sns_detail.xml
@@ -5,15 +5,6 @@
 
     <include layout="@layout/toolbar_done"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="여행스타일"
-        android:textStyle="bold"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,6 +13,18 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="여행스타일"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_tripstyle">
+        </TextView>
+
 
         <TextView
             android:layout_width="wrap_content"
